--- a/README
+++ b/README
@@ -1,13 +1,17 @@
-Let me judge your mails, tool to survey mailing lists health.
+DREDD: Let me judge your mails!
 
-When you own a mailing lists server you may want to time how long the messages need to reach some providers, this enable you to detect any problem on a server or on a specific provider. This simple tool should fulfill this requirement.
+(c) Archiloque <archiloque@archiloque.net> 2010.
 
-It is writtent in ruby and require some basic ruby knowledge to install and customize it.
+A tool to check on mailing lists health.
 
-The code is pretty simple and should be easy to hack on, contact me if you have any question.
+When you operate a mailing list server, you may want to time how long the messages take to reach the most common email providers. This enables you to detect any problem on a server, or with a specific provider. This simple tool should fulfill this requirement.
+
+It is written in ruby, and requires basic ruby knowledge to install and customize it.
+
+The code is pretty simple and should be easy to hack on. Contact me if you have any question.
 
 # How it works:
-Create a specific mailing list and an account for each mail providers you want to watch and subscribe them to the list. One background task should be setupped to launch mails to the mailing list, and another task will connect to the accounts and fetch the resulting messages. The result are displayed on a webapp and late mails generates twitter messages for the server admin.
+Create a specific mailing list (e.g. dredd@rezo.net) and an account for each mail provider you want to watch. Subscribe each of them to the dredd list. A background task must be set up, which will send mails to the mailing list. Another task will connect to each account and fetch the resulting messages. The result are displayed on a webapp. When emails are late, the system generates twitter messages on an account that the server admin will follow.
 
 # Installation
 
@@ -20,23 +24,24 @@ Create a specific mailing list and an account for each mail providers you want t
 
 # Configuration
 
-- Connect to the database and add some user using their OpenId identifiers `insert into users(openid_identifier) values('http://XXXXXX.myopenid.com/');`
-- Connect to  <http://localhost:9292/config> for the mail configuration and pick a backend password for the backfround tasks (see later)
-- Connect to  <http://localhost:9292/admin> and add some accounts
-- cron a http request to <http://localhost:9292/backend_send_mail/XXX> (where `XXX` is the backend password) to send the mails
-- cron a http request to <http://localhost:9292/backend_check_mail/XXX> (where `XXX` is the backend password) to fecth the mails
+- Connect to the database and add a user (dredd admin) by adding her OpenID identifier:
+`insert into users (openid_identifier) values ('http://XXXXXX.myopenid.com/');`
+- Connect to <http://localhost:9292/config> for the mail configuration and pick a backend password for the background tasks (see below)
+- Connect to  <http://localhost:9292/admin> and add some email accounts
+- cron a http request to <http://localhost:9292/backend_send_mail/XXX> (where `XXX` is the backend password) to send the mails to the list
+- cron a http request to <http://localhost:9292/backend_check_mail/XXX> (where `XXX` is the backend password) to fetch the mails from each account
 
 # Dependencies
 
 - the sinatra web framework <http://www.sinatrarb.com/>
 - the sequel database toolkit <http://sequel.rubyforge.org/>
 - the mail gem <http://github.com/mikel/mail/>
-- the jquery javascript framework <http://jquery.com/>
+- the jQuery javascript framework <http://jquery.com/>
 - the Flot javascript plotting library <http://code.google.com/p/flot/>
 
 # License
 
-The library have their own licenses, the content developped specifically for this site is under the MIT license.
+Each library has its own license; the content developped specifically for this site is under the MIT license.
 
 The MIT License
 
